tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0197/input.js
function hello() {'use strict'; arguments++; }
